--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,14 @@ body {
     background-size: cover;
 }
 
-h1 {
+#heading {
     color: paleturquoise;
+    border-bottom-width: 1px;;
+    border-bottom-color: black;
+    
+    
 }
+
 
 .scoreBox {
     color: black;
@@ -40,7 +45,6 @@ h1 {
     margin: 10px;
     background-color: black;
 }
-
 
 .card { 
     background-color: rgba(245, 245, 245, 0.4);
