changed timer style to red and larger and centered

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,3 +55,12 @@ body {
 .card { 
     background-color: rgba(245, 245, 245, 0.4);
 }
+
+#timer{
+    color: darkred;
+    font-size: 45px;
+    
+}
+.timer, h4{
+    text-align: center;
+}
